--- a/index.html
+++ b/index.html
@@ -213,16 +213,14 @@
         document.addEventListener('DOMContentLoaded', () => {
             // --- DADOS FALSOS PARA DEMONSTRAÇÃO ---
             const fakeStudentData = {
-                id: '20231234',
-                password: 'cc11dd22cc',
+                id: 'login123',
+                password: '123',
                 name: 'Rodrigo L. Barroso',
                 fullName: 'Rodrigo Laurindo Barroso',
                 cpf: '22673912878',
                 course: 'Tecnologia da Informação',
                 validity: '31/12/2025',
-                // ↓↓↓ AQUI É ONDE VOCÊ COLOCA O NOME DO ARQUIVO DA FOTO ↓↓↓
-                //    (Exatamente como você enviou para o GitHub, ex: 'minha-foto.jpeg')
-                photoUrl: 'NOME_DO_SEU_ARQUIVO_DE_FOTO.jpg' 
+                photoUrl: 'foto_rodrigo.jpeg' 
             };
             
             const fakeTimetableData = [
@@ -408,4 +406,3 @@
     </script>
 </body>
 </html>
-
