--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         document.addEventListener('DOMContentLoaded', () => {
             // --- DADOS FALSOS PARA DEMONSTRAÇÃO ---
             const fakeStudentData = {
-                id: 'login123',
+                id: 'Mot671367',
                 password: '123',
                 name: 'Rodrigo L. Barroso',
                 fullName: 'Rodrigo Laurindo Barroso',
@@ -406,3 +406,4 @@
     </script>
 </body>
 </html>
+
