--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
                     <!-- FRENTE DA CARTEIRINHA -->
                     <div class="card-face card-front">
                         <div class="bg-white rounded-2xl shadow-2xl w-full overflow-hidden h-full flex flex-col">
-                            <div class="bg-gradient-to-br from-yellow-400 to-yellow-500 p-4 text-center">
+                            <div class="bg-gradient-to-br from-yellow-400 to-yellow-500 pt-4 pb-20 text-center">
                                 <h3 class="font-bold text-white text-xl tracking-wide">UNIASSELVI</h3>
                             </div>
                             <div class="p-6 flex flex-col items-center flex-grow">
-                                <img id="modalStudentPhoto" src="" alt="Foto do Aluno" class="w-32 h-32 rounded-full border-4 border-white -mt-20 shadow-lg object-cover">
+                                <img id="modalStudentPhoto" src="" alt="Foto do Aluno" class="w-32 h-32 rounded-full border-4 border-white -mt-24 shadow-lg object-cover">
                                 <h4 id="modalStudentName" class="text-2xl font-bold text-gray-800 mt-4 text-center">Nome Completo do Aluno</h4>
                                 <p id="modalStudentCourse" class="text-yellow-600 font-medium text-center">Curso do Aluno</p>
                                 <div class="w-full text-left mt-6 space-y-3">
@@ -406,4 +406,3 @@
     </script>
 </body>
 </html>
-
