--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             </div>
                             <div class="p-6 flex flex-col items-center flex-grow text-center">
                                 <p class="font-semibold text-gray-700 mt-4">Documento de Identificação Estudantil</p>
-                                <img id="barcode" src="" alt="Código de Barras" class="h-20 mt-8">
+                                <img id="barcode" src="" alt="Código de Barras" class="h-20 mt-8 max-w-full object-contain">
                                 <div class="text-center text-xs text-gray-500 mt-8 border-t pt-4 w-full space-y-3">
                                     <p>Este documento é pessoal e intransferível.</p>
                                     <p>Válido em todo território nacional mediante apresentação de documento oficial com foto.</p>
@@ -406,3 +406,4 @@
     </script>
 </body>
 </html>
+
