--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
                             <div class="bg-gradient-to-br from-yellow-400 to-yellow-500 p-4 text-center">
                                 <h3 class="font-bold text-white text-xl tracking-wide">UNIASSELVI</h3>
                             </div>
-                            <div class="p-6 flex flex-col items-center flex-grow text-center">
-                                <p class="font-semibold text-gray-700 mt-4">Documento de Identificação Estudantil</p>
-                                <img id="barcode" src="" alt="Código de Barras" class="h-20 mt-8 max-w-full object-contain">
-                                <div class="text-center text-xs text-gray-500 mt-8 border-t pt-4 w-full space-y-3">
+                            <div class="p-4 flex flex-col items-center flex-grow text-center">
+                                <p class="font-semibold text-gray-700 mt-2 text-sm">Documento de Identificação Estudantil</p>
+                                <img id="barcode" src="" alt="Código de Barras" class="h-16 mt-4 max-w-full object-contain">
+                                <div class="text-center text-xs text-gray-500 mt-4 border-t pt-2 w-full space-y-2">
                                     <p>Este documento é pessoal e intransferível.</p>
                                     <p>Válido em todo território nacional mediante apresentação de documento oficial com foto.</p>
                                     <p class="font-bold mt-4">UNIASSELVI</p>
@@ -406,4 +406,3 @@
     </script>
 </body>
 </html>
-
