--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             </div>
                             <div class="p-4 flex flex-col items-center flex-grow text-center">
                                 <p class="font-semibold text-gray-700 mt-2 text-sm">Documento de Identificação Estudantil</p>
-                                <img id="barcode" src="" alt="Código de Barras" class="h-16 mt-4 max-w-full object-contain">
+                                <img id="barcode" src="" alt="Código de Barras" class="mt-4 max-w-full max-h-16 object-contain">
                                 <div class="text-center text-xs text-gray-500 mt-4 border-t pt-2 w-full space-y-2">
                                     <p>Este documento é pessoal e intransferível.</p>
                                     <p>Válido em todo território nacional mediante apresentação de documento oficial com foto.</p>
@@ -215,8 +215,8 @@
             const fakeStudentData = {
                 id: 'Mot671367',
                 password: '123',
-                name: 'Rodrigo L. Barroso',
-                fullName: 'Rodrigo Laurindo Barroso',
+                name: 'Rodrigo Barroso',
+                fullName: 'Rodrigo L. Barroso',
                 cpf: '22673912878',
                 course: 'Tecnologia da Informação',
                 validity: '31/12/2025',
@@ -406,3 +406,4 @@
     </script>
 </body>
 </html>
+
