--- a/index.html
+++ b/index.html
@@ -67,14 +67,15 @@
 
         <!-- TELA DE LOGIN -->
         <div id="loginScreen" class="w-full max-w-sm">
-            <div class="bg-white p-8 rounded-2xl shadow-xl text-center">
-                <div class="mx-auto w-20 h-20 bg-yellow-100 rounded-full flex items-center justify-center mb-4 ring-8 ring-yellow-50">
-                    <svg class="w-12 h-12 text-yellow-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M4.26 10.147a60.438 60.438 0 0 0-.491 6.347A48.627 48.627 0 0 1 12 20.904a48.627 48.627 0 0 1 8.232-4.41 60.46 60.46 0 0 0-.491-6.347m-15.482 0a50.57 50.57 0 0 0-2.658-.813A59.906 59.906 0 0 1 12 3.493a59.906 59.906 0 0 1 10.342 5.84c-.897.28-1.779.597-2.658.814m-15.482 0A50.697 50.697 0 0 1 12 13.489a50.702 50.702 0 0 1 7.74-3.342M6.75 15a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm0 0v-3.675A55.378 55.378 0 0 1 12 8.443m-7.007 11.55A5.981 5.981 0 0 0 6.75 15.75v-1.5" />
-                    </svg>
+            <div class="bg-white p-8 rounded-2xl shadow-xl">
+                <div class="flex justify-between items-center mb-6">
+                    <div>
+                         <h1 class="text-2xl font-bold text-gray-800">Portal do</h1>
+                         <h2 class="text-3xl font-bold text-yellow-500 -mt-1">Aluno</h2>
+                    </div>
+                    <img src="https://placehold.co/64x64/FEF9C3/854D0E?text=Logo" alt="Logo UNIASSELVI" class="w-16 h-16 rounded-full ring-4 ring-yellow-50">
                 </div>
-                <h1 class="text-2xl font-bold text-gray-800 mb-2">Portal do Aluno</h1>
-                <p class="text-gray-500 mb-6">Acesse sua conta para continuar</p>
+                <p class="text-gray-500 mb-8 text-center">Acesse sua conta para continuar.</p>
                 <div class="space-y-4">
                     <input id="studentId" type="text" placeholder="Nº de Matrícula" class="w-full px-4 py-3 bg-slate-100 rounded-lg text-gray-700 focus:outline-none focus:ring-2 focus:ring-yellow-500">
                     <input id="password" type="password" placeholder="Senha" class="w-full px-4 py-3 bg-slate-100 rounded-lg text-gray-700 focus:outline-none focus:ring-2 focus:ring-yellow-500">
@@ -123,12 +124,14 @@
                     <!-- FRENTE DA CARTEIRINHA -->
                     <div class="card-face card-front">
                         <div class="bg-white rounded-2xl shadow-2xl w-full overflow-hidden h-full flex flex-col">
-                            <div class="bg-gradient-to-br from-yellow-400 to-yellow-500 pt-4 pb-20 text-center">
+                            <!-- CABEÇALHO DA CARTEIRINHA MODIFICADO -->
+                            <div class="bg-gradient-to-br from-yellow-400 to-yellow-500 p-4 flex justify-between items-center">
                                 <h3 class="font-bold text-white text-xl tracking-wide">UNIASSELVI</h3>
+                                <img id="modalStudentPhoto" src="" alt="Foto do Aluno" class="w-20 h-20 rounded-full border-4 border-white shadow-md object-cover">
                             </div>
+                            <!-- CORPO DA CARTEIRINHA -->
                             <div class="p-6 flex flex-col items-center flex-grow">
-                                <img id="modalStudentPhoto" src="" alt="Foto do Aluno" class="w-32 h-32 rounded-full border-4 border-white -mt-24 shadow-lg object-cover">
-                                <h4 id="modalStudentName" class="text-2xl font-bold text-gray-800 mt-4 text-center">Nome Completo do Aluno</h4>
+                                <h4 id="modalStudentName" class="text-2xl font-bold text-gray-800 mt-2 text-center">Nome Completo do Aluno</h4>
                                 <p id="modalStudentCourse" class="text-yellow-600 font-medium text-center">Curso do Aluno</p>
                                 <div class="w-full text-left mt-6 space-y-3">
                                     <div>
@@ -406,4 +409,3 @@
     </script>
 </body>
 </html>
-
