--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <div class="bg-white rounded-2xl shadow-2xl w-full overflow-hidden h-full flex flex-col">
                             <!-- CABEÇALHO DA CARTEIRINHA MODIFICADO -->
                             <div class="bg-gradient-to-br from-yellow-400 to-yellow-500 p-4 flex justify-between items-center">
-                                <h3 class="font-bold text-white text-xl tracking-wide">UNIASSELVI</h3>
+                                <h3 class="font-bold text-xl tracking-wide animated-gradient">UNIASSELVI</h3>
                                 <img id="modalStudentPhoto" src="" alt="Foto do Aluno" class="w-20 h-20 rounded-full border-4 border-white shadow-md object-cover">
                             </div>
                             <!-- CORPO DA CARTEIRINHA -->
@@ -207,7 +207,7 @@
                     <div class="card-face card-back">
                         <div class="bg-white rounded-2xl shadow-2xl w-full overflow-hidden h-full flex flex-col">
                             <div class="bg-gradient-to-br from-yellow-400 to-yellow-500 p-4 text-center">
-                                <h3 class="font-bold text-white text-xl tracking-wide">UNIASSELVI</h3>
+                                <h3 class="font-bold text-xl tracking-wide animated-gradient">UNIASSELVI</h3>
                             </div>
                             <div class="p-4 flex flex-col items-center flex-grow text-center">
                                 <p class="font-semibold text-gray-700 mt-2 text-sm">Documento de Identificação Estudantil</p>
@@ -215,7 +215,7 @@
                                 <div class="text-center text-xs text-gray-500 mt-4 border-t pt-2 w-full space-y-2">
                                     <p>Este documento é pessoal e intransferível.</p>
                                     <p>Válido em todo território nacional mediante apresentação de documento oficial com foto.</p>
-                                    <p class="font-bold mt-4">UNIASSELVI</p>
+                                    <p class="font-bold mt-4 animated-gradient">UNIASSELVI</p>
                                     <p>Centro Universitário Leonardo da Vinci</p>
                                 </div>
                                 <div class="mt-auto">
@@ -501,3 +501,4 @@
     </script>
 </body>
 </html>
+
