--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         /* Efeito de gradiente animado para o nome da universidade */
         .animated-gradient {
-            background: linear-gradient(90deg, #fde047, #facc15, #eab308, #facc15, #fde047);
+            background: linear-gradient(90deg, #fef9c3, #ffffff, #fef9c3);
             background-size: 200% 200%;
             -webkit-background-clip: text;
             background-clip: text;
@@ -501,4 +501,3 @@
     </script>
 </body>
 </html>
-
